manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: vscode
  name: vscode
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    run: vscode
  sessionAffinity: None
  type: ClusterIP
